--- a/app/src/main/res/layout/popup_boughtlist.xml
+++ b/app/src/main/res/layout/popup_boughtlist.xml
@@ -169,6 +169,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:id="@+id/scrollviewbody"
                 android:layout_marginRight="10dp">
                 <TableLayout
                     android:id="@+id/buylisttable"
