--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
+<item android:id="@+id/action_search"
+    android:title="@string/abc_search_hint"
+    android:icon="@drawable/abc_ic_search_api_material"
+    yourapp:showAsAction="collapseActionView|ifRoom"
+    yourapp:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
