--- a/app/src/main/res/drawable/bg_info_mail.xml
+++ b/app/src/main/res/drawable/bg_info_mail.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="1dp" android:color="@color/color_tabBodyBorder"/>
-    <solid android:color="@color/color_tabHeader" />
+    <solid android:color="@color/colorInfoMailBg" />
+    <corners android:radius="5dp" />
     <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
 </shape>
