--- a/app/src/main/res/drawable/com_rounded_corner.xml
+++ b/app/src/main/res/drawable/com_rounded_corner.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/color_tabBodyBg"/>
-    <stroke android:width="1dp" android:color="@color/color_e9e7e7"/>
+    <stroke android:width="1dp" android:color="@color/color_tabBodyBorder"/>
 </shape>
