--- a/app/src/main/res/drawable/pop_dtltextctt.xml
+++ b/app/src/main/res/drawable/pop_dtltextctt.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@color/color_e9e7e7"/>
+            <stroke android:width="1dp" android:color="@color/color_tabBodyBorder"/>
             <solid android:color="#f8f8f8" />
             <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
         </shape>
