--- a/app/src/main/res/layout/receipt_list.xml
+++ b/app/src/main/res/layout/receipt_list.xml
@@ -49,15 +49,34 @@
             android:spinnerMode="dialog"
             android:layout_marginRight="3dp">
         </Spinner>
-        <Button
-            android:id="@+id/searchallbt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ALL"
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/r_linearlayoutlist2"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="left"
             android:layout_weight="1"
-            android:theme="@style/MyButton"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:textStyle="bold"/>
+            >
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_marginRight="5dp"
+            >
+            <Button
+                android:id="@+id/searchallbt"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="ALL LIST"
+                android:theme="@style/MyButton"
+                android:textStyle="bold"/>
+        </LinearLayout>
     </LinearLayout>
     <!--영수증목록-->
     <ScrollView
