--- a/app/src/main/res/layout/viewbuylist.xml
+++ b/app/src/main/res/layout/viewbuylist.xml
@@ -155,6 +155,7 @@ android:orientation="vertical">
             <ScrollView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/scrollviewbody"
                 android:layout_weight="1"
                 android:layout_marginRight="10dp"
                 >
