--- a/app/src/main/res/layout/viewfavoriteitem.xml
+++ b/app/src/main/res/layout/viewfavoriteitem.xml
@@ -21,6 +21,7 @@
             android:id="@+id/radiorg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:orientation="horizontal">
             <RadioButton
                 android:id="@+id/option1"
@@ -34,7 +35,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="구매물품"
-                android:checked="true"
                 android:textColor="@color/colorPrimaryDark"/>
         </RadioGroup>
     </LinearLayout>
@@ -109,6 +109,7 @@
                 </TableLayout>
             </LinearLayout>
             <ScrollView
+                android:id="@+id/scrollviewbody"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
